<resources>
    <string name="app_name">MobileFundamental</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_home_fragment">Hello Home Fragment</string>
    <string name="category">Category</string>
    <string name="ini_adalah_halaman_category">Ini adalah Halaman Category</string>
    <string name="detail_category">Detail Category</string>
    <string name="detail_name">Detail Name</string>
    <string name="detail_description">Detail Description</string>
    <string name="to_profile">Profile</string>
    <string name="dialog">Dialog</string>
    <string name="pemain_nba">Pemain NBA</string>
    <string name="stephen_curry">Stephen Curry</string>
    <string name="lebron_james">Lebron James</string>
    <string name="kevin_durant">Kevin Durant</string>
    <string name="james_harden">James Harden</string>
    <string name="close">Close</string>
    <string name="choose">Choose</string>
    <string name="view_model_activity">View Model Activity</string>
    <string name="navigation_activity">Navigation Activity</string>
    <string name="page_one_fragment">Page One Fragment</string>
    <string name="page_two_fragment">Page Two Fragment</string>
    <string name="tab_text_1">Page One</string>
    <string name="tab_text_2">Page Two</string>
    <string name="retrofit">Retrofit</string>
    <string name="title">Judul</string>
    <string name="description">Description</string>
    <string name="write_your_review_here">Write your review here</string>
    <string name="review">Review</string>
    <string name="send">Send</string>
    <string name="panjang">Panjang</string>
    <string name="lebar">Lebar</string>
    <string name="tinggi">Tinggi</string>
    <string name="hitung">Hitung</string>
    <string name="hasil">Hasil</string>
    <string name="hello_user">Hello User</string>
    <string name="seconds">%d seconds elapsed</string>
</resources>